--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>南丁格尔玫瑰图生成器</title>
     <link rel="stylesheet" href="/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script defer src="/_vercel/speed-insights/script.js"></script>
+    <!-- 使用 CDN 方式引入 Vercel Speed Insights -->
+    <script defer src="/_vercel/insights/script.js"></script>
 </head>
 
 <body>
